fixed jumbotron-fluid missing padding

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -142,6 +142,10 @@ h1 {
 
 /* ------------------------------------------Main Content*/
 
+.jumbotron-fluid {
+    padding: 2rem 1rem;
+}
+
 .hero-tron {
     padding-bottom: 0.5rem;
     text-align: center;
@@ -228,7 +232,7 @@ h5 {
 }
 
 @media (min-width: 768px) {
-    .jumbotron {
+    .jumbotron-fluid {
         padding-top: 0.5rem;
     }
 }
